--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Ty.</p>
+        <p>Ty. End communication.</p>
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
