--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Ty. End communication.</p>
+        <h1>Ty.</h1>
+        <h2>End communication</h2>
+        <p>Black, female, wanderer. Tech? Ok.</p>
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
