Added first list
I enjoy things.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,20 @@
 
         <!-- Add your site or application content here -->
         <h1>Ty.</h1>
-        <h2>End communication</h2>
-        <p>Black, female, wanderer. Tech? Ok.</p>
+        
+<h3>Black, female, wanderer. Tech? Ok.</h3>
 
+
+<h4>I Enjoy</h4>
+<ul>
+<li>Grapes</li>
+<li>Netflix Binges</li>
+<li>Beach Chillin</li>
+</ul>
+
+<p1>I should probably be more active. </p1>
+
+<h5>End communication.</h5>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
