--- a/index.html
+++ b/index.html
@@ -4,23 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Ty Walker</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link rel="apple-touch-icon" href="apple-touch-icon.png">-->
-        <!-- Place favicon.ico in the root directory -->
-        <!--<link rel="stylesheet" href="css/normalize.css">-->
-        <!--<link rel="stylesheet" href="css/main.css">-->
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-        <h1>Ty.</h1>
+    <body>   
+    <h1>Ty.</h1>
         
-<h3>Black, female, wanderer. Tech? Ok.</h3>
+<h3>Black. female. wanderer. </h3>
 
 
 <h4>I Enjoy</h4>
@@ -31,13 +19,24 @@
 </ul>
 
 <p1>I should probably be more active. </p1>
+<img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpf1/v/t1.0-9/10984566_10103312801151740_4553705083089612378_n.jpg?_nc_eui=hdkasbfjfdgih4253543adgs23lvbsvns5343mbvkhsd354lakfhoid3&oh=06337b75626e5fb30f41b1dbfd794ea0&oe=569CD36E"/>
+
+<h3> Social Butterfly</h3>
+  </div>
+    <div>
+      <ul>
+          <li> <a href="https://www.linkedin.com/in/walkerty"></a>Linkedin</li>
+          <li> <a href="https://twitter.com/tysavestheworld"></a>Twitter</li>
+          <li> <a href="http://tysavestheworld.tumblr.com"></a>Tumblr</li>
+          <li> <a href="https://www.facebook.com/tyneshecia"></a>Facebook</li> </ul>
+    </div>    
+</div>
+    </body>
+</html>
+
+
 
 <h5>End communication.</h5>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
-        <!--<script src="js/plugins.js"></script>-->
-        <!--<script src="js/main.js"></script>-->
 
     </body>
 </html>
