--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
     <li>Beach Chillin</li>
 </ul>
 
-<p1>I should probably be more active. </p1>
+<p>I should probably be more active. </p>
+
 <img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpf1/v/t1.0-9/10984566_10103312801151740_4553705083089612378_n.jpg?_nc_eui=hdkasbfjfdgih4253543adgs23lvbsvns5343mbvkhsd354lakfhoid3&oh=06337b75626e5fb30f41b1dbfd794ea0&oe=569CD36E"/>
 
 <h3> Social Butterfly</h3>
   </div>
     <div>
       <ul>
-          <li> <a href="https://www.linkedin.com/in/walkerty"></a>Linkedin</li>
-          <li> <a href="https://twitter.com/tysavestheworld"></a>Twitter</li>
-          <li> <a href="http://tysavestheworld.tumblr.com"></a>Tumblr</li>
-          <li> <a href="https://www.facebook.com/tyneshecia"></a>Facebook</li> </ul>
+          <li> <a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
+          <li> <a href="https://twitter.com/tysavestheworld">Twitter</a></li>
+          <li> <a href="http://tysavestheworld.tumblr.com">Tumblr</a></li>
+          <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> </ul>
     </div>    
 </div>
     </body>
 </html>
+
 
 
 
