--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
           <li> <a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
           <li> <a href="https://twitter.com/tysavestheworld">Twitter</a></li>
           <li> <a href="http://tysavestheworld.tumblr.com">Tumblr</a></li>
-          <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> </ul>
+          <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> 
+      </ul>
     </div>    
-</div>
-    </body>
-</html>
-
-
-
-
+  </div>
+    
 <h5>End communication.</h5>
 
     </body>
