--- a/index.html
+++ b/index.html
@@ -20,8 +20,20 @@
     <li>Beach Chillin</li>
 </ul>
 
+<div>
+<p1>I should probably be more active. Most days I just bask in the sun thinking about all the things I <strong>wish</strong> I could do. Good thing with <strong>Skillcrush</strong> I can start making these wishes come true. Being a do-er is <em>way</em> better than being just a dreamer. </p1>
+
 <img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpf1/v/t1.0-9/10984566_10103312801151740_4553705083089612378_n.jpg?_nc_eui=hdkasbfjfdgih4253543adgs23lvbsvns5343mbvkhsd354lakfhoid3&oh=06337b75626e5fb30f41b1dbfd794ea0&oe=569CD36E"/>
-<p1>I should probably be more active. </p1>
+
+
+<p>Lately I research Astronomy alot. Between the super blood moons and general beauty of the night sky here I cannot help but wonder. Head in the clouds as usual. Picture of the day below. </p>
+
+<img src="http://apod.nasa.gov/apod/image/1510/NightHidesTurkanaTafreshi.jpg"/>
+
+<p>Everyday I live this so issues of racism and injustice always occupy my mind.</p>
+
+<img src="https://photos-5.dropbox.com/t/2/AACaMXg6g9L6DEqgO6Kv-GsQbWtZNjrL84k8SAdVnKzdLA/12/47997922/jpeg/256x256/1/_/1/2/2015-05-14%2010.15.36.gif/EJ6SxsUBGOABIAcoBw/wx0G067pjx9NvIPZ3cqHC_vUT3K7ID12RbGq1KTGqDI?size_mode=3&size=2048x1536"/>
+</div>
 
 <h3> Social Butterfly</h3>
   </div>
