--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </ul>
 
 <div>
-<p1>I should probably be more active. Most days I just bask in the sun thinking about all the things I <strong>wish</strong> I could do. Good thing with <strong>Skillcrush</strong> I can start making these wishes come true. Being a do-er is <em>way</em> better than being just a dreamer. </p1>
+<p>I should probably be more active. Most days I just bask in the sun thinking about all the things I <strong>wish</strong> I could do. Good thing with <strong>Skillcrush</strong> I can start making these wishes come true. Being a do-er is <em>way</em> better than being just a dreamer. </p>
 
 <img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpf1/v/t1.0-9/10984566_10103312801151740_4553705083089612378_n.jpg?_nc_eui=hdkasbfjfdgih4253543adgs23lvbsvns5343mbvkhsd354lakfhoid3&oh=06337b75626e5fb30f41b1dbfd794ea0&oe=569CD36E"/>
 
@@ -36,7 +36,7 @@
 </div>
 
 <h3> Social Butterfly</h3>
-  </div>
+  <div>
     <div>
       <ul>
           <li><a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
