Helpful HTML/CSS Changes
It looks like you've just started getting into HTML which is awesome! I
decided to branch and added a couple of things that you might find
interesting.

I included a CSS[cascading style sheet], these allow you more
customizability when using HTML. Which makes it much easier and cleaner
to add your own flair.

I hope you stick with HTML/CSS its fun to learn and practical!

--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
+		<link rel="stylesheet" type="text/css" href="style.css" />
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 <title>tywalker</title>
  </head>
 <body>
-  <div>
-    <div>
-        <h1>Ty.</h1>
-      
-      <h2>Black, female, wanderer.</h2>
+	<div id = "leftBar">
+		<h1><header><center>Ty.</center></header></h1>
+		<center> Black, female, wanderer.</center>
+		
+		<h3>I Enjoy</h3>
+		<ul>
+			<li>Grapes</li>
+			<li>Netflix Binges</li>
+			<li>Beach Chillin</li>
+		</ul>
+		
+		<h3> Social Butterfly</h3>
+		<ul>
+          <li><a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
+          <li> <a href="https://twitter.com/tysavestheworld">Twitter</a></li>
+          <li> <a href="http://tysavestheworld.tumblr.com">Tumblr</a></li>
+          <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> 
+		</ul>
+	</div>
+	<div id = "centerBar">
 
 
-<h3>I Enjoy</h3>
-<ul>
-    <li>Grapes</li>
-    <li>Netflix Binges</li>
-    <li>Beach Chillin</li>
-</ul>
-
-<div>
 <p1>I should probably be more active. Most days I just bask in the sun thinking about all the things I <strong>wish</strong> I could do. Good thing with <strong>Skillcrush</strong> I can start making these wishes come true. Being a do-er is <em>way</em> better than being just a dreamer. </p1>
 
 <img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpf1/v/t1.0-9/10984566_10103312801151740_4553705083089612378_n.jpg?_nc_eui=hdkasbfjfdgih4253543adgs23lvbsvns5343mbvkhsd354lakfhoid3&oh=06337b75626e5fb30f41b1dbfd794ea0&oe=569CD36E"/>
@@ -35,15 +43,8 @@
 <img src="https://photos-5.dropbox.com/t/2/AACaMXg6g9L6DEqgO6Kv-GsQbWtZNjrL84k8SAdVnKzdLA/12/47997922/jpeg/256x256/1/_/1/2/2015-05-14%2010.15.36.gif/EJ6SxsUBGOABIAcoBw/wx0G067pjx9NvIPZ3cqHC_vUT3K7ID12RbGq1KTGqDI?size_mode=3&size=2048x1536"/>
 </div>
 
-<h3> Social Butterfly</h3>
-  </div>
-    <div>
-      <ul>
-          <li><a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
-          <li> <a href="https://twitter.com/tysavestheworld">Twitter</a></li>
-          <li> <a href="http://tysavestheworld.tumblr.com">Tumblr</a></li>
-          <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> </ul>
-    </div>    
+    
+</div>
 </div>
 </body>
 </html>
