--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>Everyday I live this so issues of racism and injustice always occupy my mind.</p>
 
-<img src="https://photos-5.dropbox.com/t/2/AACaMXg6g9L6DEqgO6Kv-GsQbWtZNjrL84k8SAdVnKzdLA/12/47997922/jpeg/256x256/1/_/1/2/2015-05-14%2010.15.36.gif/EJ6SxsUBGOABIAcoBw/wx0G067pjx9NvIPZ3cqHC_vUT3K7ID12RbGq1KTGqDI?size_mode=3&size=2048x1536"/>
+<img src="https://www.dropbox.com/s/2xtcrw119587qre/IMG_2682.jpg?dl=0"/>
 </div>
 
 <h3> Social Butterfly</h3>
