fix dart image source

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
 <p>Everyday I live this so issues of racism and injustice always occupy my mind.</p>
 
-<img src="https://www.dropbox.com/s/2xtcrw119587qre/IMG_2682.jpg?dl=0"/>
+<img src="images/DART.jpeg" />
+
 </div>
 
 <h3> Social Butterfly</h3>
