change indents and close <div>

--- a/index.html
+++ b/index.html
@@ -1,51 +1,53 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>tywalker</title>
- </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <title>tywalker</title>
+</head>
+
 <body>
   <div>
-    <div>
-        <h1>Ty.</h1>
-      
-      <h2>Black, female, wanderer.</h2>
+    <h1>Ty.</h1>
 
+    <h2>Black, female, wanderer.</h2>
+  </div>  
 
-<h3>I Enjoy</h3>
-<ul>
+  <h3>I Enjoy</h3>
+  <ul>
     <li>Grapes</li>
     <li>Netflix Binges</li>
     <li>Beach Chillin</li>
-</ul>
+  </ul>
 
-<div>
-<p>I should probably be more active. Most days I just bask in the sun thinking about all the things I <strong>wish</strong> I could do. Good thing with <strong>Skillcrush</strong> I can start making these wishes come true. Being a do-er is <em>way</em> better than being just a dreamer. </p>
+  <div>
+    <p>I should probably be more active. Most days I just bask in the sun thinking about all the things I <strong>wish</strong> I could do. Good thing with <strong>Skillcrush</strong> I can start making these wishes come true. Being a do-er is <em>way</em> better than being just a dreamer. </p>
 
-<img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpf1/v/t1.0-9/10984566_10103312801151740_4553705083089612378_n.jpg?_nc_eui=hdkasbfjfdgih4253543adgs23lvbsvns5343mbvkhsd354lakfhoid3&oh=06337b75626e5fb30f41b1dbfd794ea0&oe=569CD36E"/>
+    <img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpf1/v/t1.0-9/10984566_10103312801151740_4553705083089612378_n.jpg?_nc_eui=hdkasbfjfdgih4253543adgs23lvbsvns5343mbvkhsd354lakfhoid3&oh=06337b75626e5fb30f41b1dbfd794ea0&oe=569CD36E"/>
 
 
-<p>Lately I research Astronomy alot. Between the super blood moons and general beauty of the night sky here I cannot help but wonder. Head in the clouds as usual. </p>
+    <p>Lately I research Astronomy alot. Between the super blood moons and general beauty of the night sky here I cannot help but wonder. Head in the clouds as usual. </p>
 
-<img src="http://apod.nasa.gov/apod/image/1510/NightHidesTurkanaTafreshi.jpg"/>
+    <img src="http://apod.nasa.gov/apod/image/1510/NightHidesTurkanaTafreshi.jpg"/>
 
-<p>Everyday I live this so issues of racism and injustice always occupy my mind.</p>
+    <p>Everyday I live this so issues of racism and injustice always occupy my mind.</p>
 
-<img src="images/DART.jpeg" />
+    <img src="images/DART.jpeg" />
 
-</div>
+  </div>
 
-<h3> Social Butterfly</h3>
+  <h3> Social Butterfly</h3>
   <div>
     <div>
       <ul>
-          <li><a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
-          <li> <a href="https://twitter.com/tysavestheworld">Twitter</a></li>
-          <li> <a href="http://tysavestheworld.tumblr.com">Tumblr</a></li>
-          <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> </ul>
+        <li><a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
+        <li> <a href="https://twitter.com/tysavestheworld">Twitter</a></li>
+        <li> <a href="http://tysavestheworld.tumblr.com">Tumblr</a></li>
+        <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> 
+      </ul>
     </div>    
-</div>
+  </div>
 </body>
 </html>
 
