--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
 </head>
 
 <body>
-  <div>
+  <div class="main">
     <h1>Ty.</h1>
-
+  </div>
+  
+  <div id="summary">
     <h2>Black, female, wanderer.</h2>
-  </div>  
+  </div>
 
-  <h3>I Enjoy</h3>
-  <ul>
-    <li>Grapes</li>
-    <li>Netflix Binges</li>
-    <li>Beach Chillin</li>
-  </ul>
+  <div class="enjoy">  
+    <h3>I Enjoy</h3>
+     <ul>
+       <li>Grapes</li>
+       <li>Netflix Binges</li>
+       <li>Beach Chillin</li>
+     </ul>
+  </div>   
 
-  <div>
+  <div class="captions">
     <p>I should probably be more active. Most days I just bask in the sun thinking about all the things I <strong>wish</strong> I could do. Good thing with <strong>Skillcrush</strong> I can start making these wishes come true. Being a do-er is <em>way</em> better than being just a dreamer. </p>
 
     <img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpf1/v/t1.0-9/10984566_10103312801151740_4553705083089612378_n.jpg?_nc_eui=hdkasbfjfdgih4253543adgs23lvbsvns5343mbvkhsd354lakfhoid3&oh=06337b75626e5fb30f41b1dbfd794ea0&oe=569CD36E"/>
@@ -34,20 +38,21 @@
     <p>Everyday I live this so issues of racism and injustice always occupy my mind.</p>
 
     <img src="images/DART.jpeg" />
-
   </div>
 
-  <h3> Social Butterfly</h3>
+  <div id="social">
+    <h3> Social Butterfly</h3>
+  </div>
+  
   <div>
-    <div>
       <ul>
         <li><a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
         <li> <a href="https://twitter.com/tysavestheworld">Twitter</a></li>
         <li> <a href="http://tysavestheworld.tumblr.com">Tumblr</a></li>
         <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> 
-      </ul>
-    </div>    
+      </ul>    
   </div>
+
 <p> ::End communication:: </p>
 </body>
 </html>
