--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="main">
+  <div id="main">
     <h1>Ty.</h1>
   </div>
   
@@ -42,15 +42,14 @@
 
   <div id="social">
     <h3> Social Butterfly</h3>
-  </div>
-  
-  <div>
-      <ul>
-        <li><a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
-        <li> <a href="https://twitter.com/tysavestheworld">Twitter</a></li>
-        <li> <a href="http://tysavestheworld.tumblr.com">Tumblr</a></li>
-        <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> 
-      </ul>    
+      <div class="social-media-links">
+        <ul>
+         <li><a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
+         <li> <a href="https://twitter.com/tysavestheworld">Twitter</a></li>
+         <li> <a href="http://tysavestheworld.tumblr.com">Tumblr</a></li>
+         <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> 
+       </ul>
+      </div>     
   </div>
 
 <p> ::End communication:: </p>
