--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <title>tywalker</title>
+  <link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -52,6 +53,10 @@
       </div>     
   </div>
 
+<div id="modal-popup">
+  <h2>Work in progress</h2>
+</div>
+  
 <p> ::End communication:: </p>
 </body>
 </html>
