edit wording add image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
   
   <div id="summary">
-    <h2>Black, female, wanderer.</h2>
+    <h2>Black. female. wanderer.</h2>
   </div>
 
   <div class="enjoy">  
@@ -45,13 +45,15 @@
     <h3> Social Butterfly</h3>
       <div class="social-media-links">
         <ul>
-         <li><a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
+         <li> <a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
          <li> <a href="https://twitter.com/tysavestheworld">Twitter</a></li>
          <li> <a href="http://tysavestheworld.tumblr.com">Tumblr</a></li>
          <li> <a href="https://www.facebook.com/tyneshecia">Facebook</a></li> 
        </ul>
       </div>     
   </div>
+
+  <img src="images/Skillcrush_Computer.jpg"/>
 
 <div id="modal-popup">
   <h2>Work in progress</h2>
