--- a/resume website/index.html
+++ b/resume website/index.html
@@ -20,20 +20,20 @@
   <div class="social-media">
 	<ul>
       <li class="linkedin">
-      <a href="https://www.linkedin.com/in/walkerty">
-      	<img src="file:///Users/tywalker/Dropbox/website/images/linkedin.png">
+      <a target="_BLANK" href="https://www.linkedin.com/in/walkerty">
+      	<img src="file:///Users/tywalker/Dropbox/website/images/icons/linkedin.png">
       </a> 
       </li>
       
       <li class="twitter"> 
-      <a href="https://twitter.com/tysavestheworld">
-      	<img src="file:///Users/tywalker/Dropbox/website/images/twitter.png">
+      <a target="_BLANK" href="https://twitter.com/tysavestheworld">
+      	<img src="file:///Users/tywalker/Dropbox/website/images/icons/twitter.png">
       </a>
       </li>
       
       <li class="tumblr"> 
-      <a href="http://tysavestheworld.tumblr.com">
-      	<img src="file:///Users/tywalker/Dropbox/website/images/tumblr.png">
+      <a target="_BLANK" href="http://tysavestheworld.tumblr.com">
+      	<img src="file:///Users/tywalker/Dropbox/website/images/icons/tumblr.png">
       </a>
       </li>
     </ul>     
