fix image issues

--- a/resume website/index.html
+++ b/resume website/index.html
@@ -21,19 +21,19 @@
 	<ul>
       <li class="linkedin">
       <a target="_BLANK" href="https://www.linkedin.com/in/walkerty">
-      	<img src="file:///Users/tywalker/Dropbox/website/images/icons/linkedin.png">
+      	<img src="../images/icons/linkedin.png">
       </a> 
       </li>
       
       <li class="twitter"> 
       <a target="_BLANK" href="https://twitter.com/tysavestheworld">
-      	<img src="file:///Users/tywalker/Dropbox/website/images/icons/twitter.png">
+      	<img src="../images/icons/twitter.png">
       </a>
       </li>
       
       <li class="tumblr"> 
       <a target="_BLANK" href="http://tysavestheworld.tumblr.com">
-      	<img src="file:///Users/tywalker/Dropbox/website/images/icons/tumblr.png">
+      	<img src="../images/icons/tumblr.png">
       </a>
       </li>
     </ul>     
