add resume page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
   </div>
 
   <div id="social">
-    <h3> Social Butterfly</h3>
+    <h3> Social Butterfly </h3>
+      <a href="../website/resume website/index.html">Social Butterfly</a>
+      
       <div class="social-media-links">
         <ul>
          <li> <a href="https://www.linkedin.com/in/walkerty">Linkedin</a> </li>
