Fix resume link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 
   <div id="social">
-    <a href="../website/resume website/index.html">Social Butterfly</a>    
+    <a href="../resume website/index.html">Social Butterfly</a>    
   </div>
 
 <div id="modal-popup">
