--- a/resume website/index.html
+++ b/resume website/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="container">
 	<h1>Ty Walker</h1>
-	<h3>Environmental Scienti & Web Developer</h3>
+	<h3>Environmental Scientist & Web Developer</h3>
 	<p>Trying to save the world and build a better one. </p>
 	<p>Currently working the nonprofit circuit in the East Bay. </p>
 	<p>When I'm not coding  you can find me researching the latest scientific discoveries or chilling on the beach with a good book planning my next adventure. </p>
