--- a/resume website/index.html
+++ b/resume website/index.html
@@ -14,7 +14,7 @@
 	<h3>Environmental Scientist & Web Developer</h3>
 	<p>Trying to save the world and build a better one. </p>
 	<p>Currently working the nonprofit circuit in the East Bay. </p>
-	<p>When I'm not coding  you can find me researching the latest scientific discoveries or chilling on the beach with a good book planning my next adventure. </p>
+	<p>When I'm not coding  you can find me researching the latest scientific discoveries or on the beach with a good book planning my next adventure. </p>
   </div>	
   
   <div class="social-media">
