--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div id="container">
     <h1>Ty Walker</h1>
-    <h3>Data Enthusiast. Project Manager. Advocate. Diplomat.  </h3>
+    <h3>Data Enthusiast. Project Manager. Diplomat. Advocate.  </h3>
     <p>Trying to save the world and build a better one.</p>
     <p>Currently working the nonprofit circuit in the East Bay.</p>
     <p>When I'm not coding  you can find me researching the latest scientific discoveries or lying on the beach with a good book planning my next adventure.</p>
