Revert "css link change"
This reverts commit 6818c3f8555b383b92610a1dcf2ac31ac581d91e.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://ty-walker.com/css/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Ty Walker</title>
   <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
